# eps-core

./: LICENSE  README.md  pyproject.toml
src/eps/: cli.py  main.py  plugins.py  store.py
src/eps/commands/: delete.py  entry.py  exe.py  load.py  modify.py  save.py  settings.py  view.py
tests/: test_commands.py
